fix toggle collapse in burger menu on selection

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -77,37 +77,29 @@ a {
   color: #0facf3;
 }
 
-/* Extra markup and styles for table-esque vertical and horizontal centering */
-.site-wrapper {
-  display: table;
-  width: 100%;
-  height: 100%; /* For at least Firefox */
-  -webkit-box-shadow: inset 0 0 100px rgba(0,0,0,.5);
-          box-shadow: inset 0 0 100px rgba(0,0,0,.5);
-  background-image: url("../images/photo-1444201716572-c60ec66d0494.jpg");
-  background-size: 100% auto;
-  background-repeat: no-repeat;
+/* CUSTOMIZE THE CAROUSEL
+-------------------------------------------------- */
+
+/* Carousel base class */
+.carousel {
+  height: 500px;
 }
-.site-wrapper-inner {
-  display: table-cell;
-  vertical-align: top;
-}
-.cover-container {
-  margin-right: auto;
-  margin-left: auto;
+/* Since positioning the image, we need to help out the caption */
+.carousel-caption {
+  z-index: 10;
 }
 
-/*
- * Cover
- */
-
-.cover {
-  padding: 0 20px;
+/* Declare heights because of positioning of img element */
+.carousel .item {
+  height: 500px;
+  background-color: #777;
 }
-
-.cover .btn-lg {
-  padding: 10px 20px;
-  font-weight: bold;
+.carousel-inner > .item > img {
+  position: absolute;
+  top: 0;
+  left: 0;
+  min-width: 100%;
+  height: 500px;
 }
 
 /*
